chore(simplify): collapse accidental complexity in gateway-metrics-nifi-integration
- Remove signature-restating @param tag from publishCounterDeltas Javadoc
- Drop full private-method Javadoc from publishDelta (private, no WHY beyond name)
- Replace Collectors.toList() with Stream.toList() in GatewayMetricsPrometheusIT
- Remove now-unused java.util.stream.Collectors import from the IT

Co-Authored-By: Claude <noreply@anthropic.com>